--- a/packages/manager/modules/pci/src/projects/project/storages/databases/database/users/add/translations/Messages_pt_PT.json
+++ b/packages/manager/modules/pci/src/projects/project/storages/databases/database/users/add/translations/Messages_pt_PT.json
@@ -21,5 +21,11 @@
   "pci_databases_users_add_username_pattern_rule": "Deve ser composto por caracteres alfanuméricos, pontos (.), underscores (_) ou hífenes (-), não deve começar por um hífen (-) ou um ponto (.)",
   "pci_databases_users_add_group_max_rule": "Máximo de {{max}} caracteres",
   "pci_databases_users_add_group_pattern_rule": "Deve ser composto por caracteres alfanuméricos. Apenas são permitidos maiúsculas/minúsculas, underscores (_) e números.",
-  "pci_databases_users_add_group_label": "Grupo"
+  "pci_databases_users_add_group_label": "Grupo",
+  "pci_databases_users_add_role": "Adicionar uma função",
+  "pci_databases_user_add_select_roles": "Selecionar uma função",
+  "pci_databases_user_add_input_database": "Base de dados",
+  "pci_databases_user_add_error_existing": "Uma função semelhante já foi adicionada.",
+  "pci_databases_user_add_warning_roles_added": "Atenção, ainda não foi configurada nenhuma função para este utilizador. Clique no botão «+» para concluir a adição da sua primeira função.",
+  "pci_databases_user_add_configured_roles": "{{nbRoles}} função(ões) configurada(s)"
 }
