--- a/packages/manager/modules/pci/src/projects/project/storages/databases/database/users/add/translations/Messages_pl_PL.json
+++ b/packages/manager/modules/pci/src/projects/project/storages/databases/database/users/add/translations/Messages_pl_PL.json
@@ -21,5 +21,11 @@
   "pci_databases_users_add_username_pattern_rule": "Może zawierać jedynie cyfry, litery, kropki (.), podkreślenia (_) lub myślniki (-) , nie może rozpoczynać się od myślnika (-) ani od kropki (.).",
   "pci_databases_users_add_group_max_rule": "Maksimum {{max}} znaków",
   "pci_databases_users_add_group_pattern_rule": "Musi składać się z znaków alfanumerycznych. Dozwolone są tylko wielkie/małe litery, podkreślenia (_) i liczby.",
-  "pci_databases_users_add_group_label": "Grupa"
+  "pci_databases_users_add_group_label": "Grupa",
+  "pci_databases_users_add_role": "Dodaj rolę",
+  "pci_databases_user_add_select_roles": "Wybierz rolę",
+  "pci_databases_user_add_input_database": "Database",
+  "pci_databases_user_add_error_existing": "Podobna rola została już dodana.",
+  "pci_databases_user_add_warning_roles_added": "Uwaga, dla tego użytkownika nie została jeszcze skonfigurowana żadna rola. Kliknij przycisk „+”, aby dokończyć dodawanie pierwszej roli.",
+  "pci_databases_user_add_configured_roles": "Liczba skonfigurowanych ról: {{nbRoles}}"
 }
