--- a/packages/manager/apps/dedicated/client/app/dedicated/server/details/translations/Messages_fr_CA.json
+++ b/packages/manager/apps/dedicated/client/app/dedicated/server/details/translations/Messages_fr_CA.json
@@ -634,7 +634,6 @@
   "server_configuration_installation_form_postInstallationScriptLink_help": "Vous pouvez indiquer ici l'URL d'un script de post-installation. Il permet de finaliser l'installation de votre système de façon simple. Vous pouvez ainsi facilement configurer vos préférences et installer des logiciels. Attention: le temps d'exécution du script est d'une heure maximum.",
   "server_configuration_installation_form_postInstallationScriptLinkReturn": "Valeur de retour du script :",
   "server_configuration_installation_form_postInstallationScriptLinkReturn_help": "Il s'agit de tout ou une partie du résultat attendu sur la sortie standard suite à l'exécution du script. Vous pouvez laisser ce champs vide mais ceci est déconseillé.",
-  "server_configuration_installation_form_installSqlServer": "Installer sqlServer",
   "server_configuration_installation_form_useDistribKernel": "Installer noyau d'origine",
   "server_configuration_installation_form_useSpla": "Utiliser licence SPLA",
   "server_configuration_installation_form_ssh": "Clés ssh :",
@@ -691,7 +690,7 @@
   "server_configuration_installation_ovh_step2_hide_all_disk": "Masquer les autres disques",
   "server_configuration_installation_ovh_step2_file_system": "Système de fichier",
   "server_configuration_installation_ovh_step2_mount_point": "Point de montage",
-  "server_configuration_installation_ovh_step2_volume_name": "Nom du volume LVM",
+  "server_configuration_installation_ovh_step2_volume_name": "Nom du volume logique (LVM) / zpool (ZFS)",
   "server_configuration_installation_ovh_step2_raid": "Raid",
   "server_configuration_installation_ovh_step2_raid_help": "Le RAID (à partir du RAID 1) permet de répliquer des données sur plusieurs disques durs afin d'améliorer la sauvegarde des données du serveur en cas de panne. Attention : le RAID 0 ne sauvegarde pas les données, il est donc déconseillé.",
   "server_configuration_installation_ovh_step2_available_size": "Taille de la partition",
@@ -714,13 +713,10 @@
   "server_configuration_installation_ovh_step2_error_partition_size_exceed": "Vous dépassez l'espace disponible. Vous devez réduire l'espace occupé par cette partition.",
   "server_configuration_installation_ovh_step2_warning_partition_raid0": "Attention, si vous configurez cette partition en Raid 0 vous gagnerez de l'espace mais la configuration en Raid 0 n'offrira pas de tolérance de panne.",
   "server_configuration_installation_ovh_step2_error_partition_raid0": "La partition {{t0}} doit être en raid1",
-  "server_configuration_installation_ovh_step2_error_partition_raid_LV": "Toutes les partitions LV doivent avoir un raid identique.",
   "server_configuration_installation_ovh_step2_error_partition_order": "Une partition est déjà assignée à ce numéro d'ordre",
   "server_configuration_installation_ovh_step2_error_partition_order_first": "La première partition doit avoir comme point de montage /boot ou /. Si les 2 partitions sont présentes, /boot doit être placé en première position.",
   "server_configuration_installation_ovh_step2_error_partition_order_first_win": "La première partition doit avoir comme point de montage c:",
   "server_configuration_installation_ovh_step2_error_partition_volumename_empty": "Le nom du volume est obligatoire pour une partition de type LV",
-  "server_configuration_installation_ovh_step2_error_partition_volumename_wrong": "Le nom du volume ne doit pas contenir de caractères spéciaux, ne doit pas excéder 16 caractères et doit etre différent de pvmove et snapshot.",
-  "server_configuration_installation_ovh_step2_error_partition_volumename_use": "Ce nom de volume est déjà utilisé",
   "server_configuration_installation_ovh_step2_error_partition_mountPoint_empty": "Le point de montage est obligatoire",
   "server_configuration_installation_ovh_step2_error_partition_mountPoint_wrong": "Ce point de montage ne peut être utilisé, le nom est incorrect. Les caractères spéciaux sont interdits (excepté _ / et -) et le nombre maximum de caractères est de 255.",
   "server_configuration_installation_ovh_step2_error_partition_mountPoint_wrong2": "Le point de montage /var/log n'est pas autorisé pour cette distribution. Vous devez utiliser /home/log.",
@@ -737,7 +733,6 @@
   "server_configuration_installation_ovh_step2_error_partition_size_min": "La taille minimale d'une partition est de {{t0}}",
   "server_configuration_installation_ovh_step2_error_partition_type_order": "Une partition primaire doit être précédée d'une partition primaire.",
   "server_configuration_installation_ovh_step2_error_partition_type_order_lv": "Une partition de type LV doit être suivie d'une partition de type LV.",
-  "server_configuration_installation_ovh_step2_error_partition_type_logical_lv": "Vous ne pouvez pas avoir une partition logique et une partition lv simultanément",
   "server_configuration_installation_ovh_step2_error_partition_type_primary": "Vous ne pouvez pas avoir plus de 4 partitions primaires. Modifiez le type d'une partition primaire en un autre type pour pouvoir ajouter d'autres partitions.",
   "server_configuration_installation_ovh_step2_error_partition_type_lv_swap": "La partition swap n'est pas compatible avec le type LV",
   "server_configuration_installation_ovh_step2_error_set": "Une erreur est survenue lors de la modification de la partition {{t0}} ({{t1}})",
