--- a/packages/manager/apps/dedicated/client/app/ip/translations/Messages_de_DE.json
+++ b/packages/manager/apps/dedicated/client/app/ip/translations/Messages_de_DE.json
@@ -708,11 +708,11 @@
   "ip_table_header_organisation_help": "Eine Organisation ist die für einen bestimmten IP-Block verantwortliche Stelle, z. B. Ihr Unternehmen.",
   "ip_table_header_alerts_help": "Benachrichtigungen zur IP-Adresse oder zum IP-Block.",
   "ip_table_filter_advanced_mode": "Erweiterter Modus",
-  "ip_edit_or_assosiate_title": "Eine Organisation bearbeiten/ zuweisen",
+  "ip_edit_or_assosiate_title": "Die Informationen zum IP-Block anzeigen/ändern",
   "ip_edit_or_assosiate_editor_tab": "Bearbeiten",
-  "ip_edit_or_assosiate_asso_tab": "Eine Organisation zuweisen",
-  "ip_edit_or_assosiate_edit_submit_button": "Editor",
-  "ip_edit_or_assosiate_asso_submit_button": "Zuweisen",
+  "ip_edit_or_assosiate_asso_tab": "Organisation",
+  "ip_edit_or_assosiate_edit_submit_button": "Bearbeiten",
+  "ip_edit_or_assosiate_asso_submit_button": "Bestätigen",
   "ip_edit_or_assosiate_cancel_button": "Abbrechen",
   "ip_edit_or_assosiate_editor_tab_name_label": "Netzwerkname (Netname)",
   "ip_edit_or_assosiate_editor_tab_description_label": "Beschreibung",
@@ -734,5 +734,7 @@
   "ip_repricing_banner_list_item_2": "Ab dem 1. Dezember 2022 für Ihre bestehenden Adressen, die vor dem 6. Oktober 2022 bestellt wurden.",
   "ip_repricing_banner_link": "Mehr Informationen",
   "ip_unused_banner_text": "Nicht alle Ihrer IP-Adressen werden derzeit genutzt. IPv4-Adressen werden zu einer immer knapperen Ressource. Wenn Sie sie also nicht benötigen, möchten wir Sie bitten, sie freizugeben.",
-  "ip_unused_banner_link": "Meine nicht genutzten IPs anzeigen."
+  "ip_unused_banner_link": "Meine nicht genutzten IPs anzeigen.",
+  "ip_edit_or_assosiate_description": "In diesem Abschnitt können Sie die öffentlichen Informationen zu Ihrem IP-Block anpassen (Informationen in der Whois-Datenbank).",
+  "ip_edit_or_assosiate_network_tab": "Netzwerk"
 }
