--- a/packages/manager/modules/pci/src/projects/project/storages/databases/database/users/add/translations/Messages_fr_FR.json
+++ b/packages/manager/modules/pci/src/projects/project/storages/databases/database/users/add/translations/Messages_fr_FR.json
@@ -1,6 +1,7 @@
 {
   "pci_databases_users_add": "Ajouter un utilisateur",
   "pci_databases_users_add_username_label": "Nom d'utilisateur",
+  "pci_databases_users_add_role": "Ajouter un rôle",
   "pci_databases_users_add_roles": "Éditer les rôles",
   "pci_databases_users_add_roles_available": "Rôles disponibles",
   "pci_databases_users_add_roles_selected": "Rôles sélectionnés",
@@ -21,5 +22,10 @@
   "pci_databases_users_add_username_pattern_rule": "Doit être composé de caractères alphanumériques, points (.), underscores (_) ou tirets ( - ), ne doit pas commencer par un tiret ( - ) ou un point (.)",
   "pci_databases_users_add_group_max_rule": "Maximum {{max}} caractères",
   "pci_databases_users_add_group_pattern_rule": "Doit être composé de caractères alphanumériques. Seuls les lettres en majuscule/minuscule, les underscores (_) et nombres sont autorisés.",
-  "pci_databases_users_add_group_label": "Groupe"
+  "pci_databases_users_add_group_label": "Groupe",
+  "pci_databases_user_add_select_roles": "Selectionner un rôle",
+  "pci_databases_user_add_input_database": "Database",
+  "pci_databases_user_add_error_existing": "Un rôle similaire a déjà été ajouté.",
+  "pci_databases_user_add_warning_roles_added": "Attention, aucun rôle n'a encore été configuré pour cet utilisateur. Cliquez sur le bouton \"+\" pour finaliser l'ajout de votre premier rôle.",
+  "pci_databases_user_add_configured_roles": "{{nbRoles}} rôle(s) configuré(s)"
 }
