fix(i18n): add missing translations [CDS 2153]
Signed-off-by: CDS Translator Agent <opensource@ovh.net>

--- a/packages/manager/apps/telecom/src/app/telecom/pack/move/translations/Messages_en_GB.json
+++ b/packages/manager/apps/telecom/src/app/telecom/pack/move/translations/Messages_en_GB.json
@@ -281,6 +281,6 @@
   "pack_move_modem_required": "You must select a modem type",
   "pack_move_confirm_modem_rental_yes": "New modem rental",
   "pack_move_confirm_modem_rental_recycled": "Recycled modem rental",
-  "pack_move_offers_debit_mention_1": "(1) Up to 92 Mb/s descending in VDSL and 22 Mb/s in ADSL, depending on eligibility.",
-  "pack_move_offers_debit_mention_2": "(2) Up to 36 Mb/s VDSL and 1 Mb/s ADSL, depending on eligibility."
+  "pack_move_offers_debit_mention_1": "(1) Up to 92Mb/s downstream bandwidth in VDSL and 22Mb/s in ADSL, depending on eligibility.",
+  "pack_move_offers_debit_mention_2": "(2) Up to 36Mb/s upstream bandwidth in VDSL and 1Mb/s in ADSL, depending on eligibility."
 }
