--- a/packages/manager/modules/pci/src/projects/project/ai-dashboard/tabs/users-tokens/create-token/translations/Messages_en_GB.json
+++ b/packages/manager/modules/pci/src/projects/project/ai-dashboard/tabs/users-tokens/create-token/translations/Messages_en_GB.json
@@ -1,7 +1,7 @@
 {
   "pci_ai_dashboard_create_token_header": "Create an AI token",
   "pci_ai_dashboard_create_token_label_selector": "Label selector (optional)",
-  "pci_ai_dashboard_create_token_name": "Surname",
+  "pci_ai_dashboard_create_token_name": "Name",
   "pci_ai_dashboard_create_token_label_selector_validation_error": "The label selector must be in the following form: label=value",
   "pci_ai_dashboard_create_token_role": "Role",
   "pci_ai_dashboard_create_token_role_help": "Choose an Administrator or Operator role (easy to use)",
