--- a/packages/manager/modules/pci/src/projects/project/storages/databases/database/current-queries/translations/Messages_en_GB.json
+++ b/packages/manager/modules/pci/src/projects/project/storages/databases/database/current-queries/translations/Messages_en_GB.json
@@ -15,6 +15,6 @@
   "pci_databases_current_queries_datagrid_column_application_name": "Application name",
   "pci_databases_current_queries_fetch_error": "An error has occurred loading the queries in progress. Please try again later.",
   "pci_databases_current_queries_datagrid_terminate_action_label": "Finish",
-  "pci_databases_current_queries_datagrid_terminate_action_success": "The identified request {{pid}} is ending and will be removed from the list once you refresh the page again.",
-  "pci_databases_current_queries_datagrid_terminate_action_error": "The identified query cannot be completed {{pid}}."
+  "pci_databases_current_queries_datagrid_terminate_action_success": "The query identified {{pid}} is currently finishing, and will be removed from the list the next time it is refreshed.",
+  "pci_databases_current_queries_datagrid_terminate_action_error": "Unable to complete the query identified {{pid}}."
 }
