--- a/packages/manager/modules/pci/src/projects/project/data-processing/home/translations/Messages_fr_FR.json
+++ b/packages/manager/modules/pci/src/projects/project/data-processing/home/translations/Messages_fr_FR.json
@@ -1,8 +1,8 @@
 {
   "data_processing_home_jobs_tile_title": "Jobs",
   "data_processing_home_notebooks_tile_title": "Notebooks for Apache Spark&trade;",
-  "data_processing_home_button_new_notebook": "Créer un data notebook",
-  "data_processing_home_go_to_notebooks": "Voir tous les data notebooks",
+  "data_processing_home_button_new_notebook": "Créer un notebook",
+  "data_processing_home_go_to_notebooks": "Voir tous les notebooks",
   "data_processing_home_button_new_job": "Démarrer un nouveau job",
   "data_processing_home_go_to_jobs": "Voir tous les jobs",
   "data_processing_home_info_jobs": "Démarrez des jobs Apache Spark à la demande, en spécifiant la quantité de RAM et de vCPU à utiliser. Téléchargez votre code sous format de JAR ou de code Python dans un conteneur Swift et exécutez-le en soumettant un job. Vous pourrez suivre l'exécution de votre job à l'aide de logs et de métriques en temps réel.",
