--- a/packages/manager/apps/container/src/public/translations/sidebar/Messages_en_GB.json
+++ b/packages/manager/apps/container/src/public/translations/sidebar/Messages_en_GB.json
@@ -150,5 +150,6 @@
   "sidebar_telephony_type_alias": "No.",
   "sidebar_telephony_type_sipTrunk": "Trunk",
   "sidebar_telephony_type_sip": "SIP",
-  "sidebar_telephony_type_fax": "Fax"
+  "sidebar_telephony_type_fax": "Fax",
+  "sidebar_pci_volume_backup": "Volume Backup"
 }
