--- a/packages/manager/modules/pci/src/projects/project/storages/blocks/translations/Messages_en_GB.json
+++ b/packages/manager/modules/pci/src/projects/project/storages/blocks/translations/Messages_en_GB.json
@@ -17,5 +17,6 @@
   "pci_projects_project_storages_blocks_snapshot_create_label": "Create a snapshot",
   "pci_projects_project_storages_blocks_delete_label": "Delete",
   "pci_projects_project_storages_blocks_add_label": "Create a volume ",
-  "pci_projects_project_storages_blocks_id_label": "ID"
+  "pci_projects_project_storages_blocks_id_label": "ID",
+  "pci_projects_project_storages_blocks_create_backup_label": "Create a backup "
 }
