--- a/packages/manager/modules/iam/src/components/deleteEntity/translations/Messages_fr_FR.json
+++ b/packages/manager/modules/iam/src/components/deleteEntity/translations/Messages_fr_FR.json
@@ -5,6 +5,11 @@
   "iam_delete_entity_policy_name": "Suppression de la politique :",
   "iam_delete_entity_policy_success": "La politique a bien été supprimée",
   "iam_delete_entity_policy_warn": "La suppression d'une politique entraine la perte de droits d'accès des identités sur les ressources.",
+  "iam_delete_entity_identity_error": "Une erreur est survenue lors de la suppression de l'identité : {{ message }}",
+  "iam_delete_entity_identity_heading": "Suppression d'une identité",
+  "iam_delete_entity_identity_name": "Suppression de l'identité :",
+  "iam_delete_entity_identity_success": "L'identité a bien été supprimée",
+  "iam_delete_entity_identity_warn": "Êtes-vous sûr.e de vouloir supprimer l'identité liée à cette politique. Vous ne supprimez pas l'utilisateur, mais uniquement son lien avec la politique.",
   "iam_delete_entity_primary_label": "Supprimer",
   "iam_delete_entity_secondary_label": "Annuler"
 }
