fix(i18n): add missing translations [CDS 2166]
Signed-off-by: CDS Translator Agent <opensource@ovh.net>

--- a/packages/manager/modules/pci/src/projects/project/additional-ips/order/translations/Messages_pt_PT.json
+++ b/packages/manager/modules/pci/src/projects/project/additional-ips/order/translations/Messages_pt_PT.json
@@ -1,8 +1,8 @@
 {
-  "pci_additional_ips_failoverip_order": "Adquirir Additional IP Cloud",
+  "pci_additional_ips_failoverip_order": "Adquirir endereços Additional IP",
   "pci_additional_ips_failoverip_order_generate": "Gerar nota de encomenda",
   "pci_additional_ips_failoverip_order_cancel": "Anular",
-  "pci_additional_ips_failoverip_order_description": "Os endereços Additional IP Cloud podem ser migrados de um servidor para outro dentro do mesmo projeto cloud e do mesmo continente.",
+  "pci_additional_ips_failoverip_order_description": "Os endereços Additional IP podem ser migrados de um servidor para outro dentro do mesmo projeto cloud e do mesmo continente.",
   "pci_additional_ips_failoverip_order_quantity": "Número de Additional IP",
   "pci_additional_ips_failoverip_order_instance": "Instância para associar",
   "pci_additional_ips_failoverip_order_region": "País do Additional IP",
@@ -19,7 +19,7 @@
   "pci_additional_ip_failover_ip": "Additional IP (OVHcloud)",
   "pci_additional_ip_failover_ip_description": "Solução otimizada para as operações de migração interprodutos OVHcloud. Configuração manual necessária, tratamento dos casos de uso da cloud híbrida. Pagamento antecipado.",
   "pci_additional_ip_create_step_select_region_failover_ip": "Escolha um país para o seu novo Additional IP OVHcloud",
-  "pci_additional_ip_create_step_select_region_description_failover_ip": "Para mais informações sobre os Additional IP, <a href=\"{{ guideLink }}\" target=\"_blank\" data-track-name=\"{{ trackLabel }}\" data-track-on=\"click\" data-track-type=\"action\">clique aqui</a>.",
+  "pci_additional_ip_create_step_select_region_description_failover_ip": "Para mais informações sobre o Additional IP, <a href=\"{{ guideLink }}\" target=\"_blank\" data-track-name=\"{{ trackLabel }}\" data-track-on=\"click\" data-track-type=\"action\">clique aqui</a>.",
   "pci_additional_ip_create_step_attach_instance_info_failover_ip": "Este IP será diretamente ligado à instância (modo antigo, sem Gateway). Escolha uma instância a utilizar. É necessária uma operação manual sobre a instância; <a href=\"{{ guideLink }}\" target=\"_blank\" data-track-name=\"{{ trackLabel }}\" data-track-on=\"click\" data-track-type=\"action\">mais detalhes aqui</a>",
   "pci_additional_ip_create_no_instance_message_failover_ip": "Não dispõe atualmente de nenhuma instância à qual associar um Additional IP. Deve criar uma.",
   "pci_additional_ip_floating_ip": "Floating IP (Public Cloud)",
