--- a/packages/manager/modules/pci/src/projects/project/gateways/add/translations/Messages_it_IT.json
+++ b/packages/manager/modules/pci/src/projects/project/gateways/add/translations/Messages_it_IT.json
@@ -2,7 +2,7 @@
   "pci_projects_project_public_gateways_add_title": "Creare un'istanza Gateway",
   "pci_projects_project_public_gateways_add_description1": "Crea una nuova istanza Gateway per accedere alle reti esterne in totale sicurezza.",
   "pci_projects_project_public_gateways_add_description2": "Questa scelta è l’opzione migliore per accedere a risorse Internet a partire da istanze private (SNAT)",
-  "pci_projects_project_public_gateways_add_description3": "Può essere utilizzato anche con altre funzionaltà di rete, come il Load Balancer di OVHcloud per Public Cloud e i Floating IP.",
+  "pci_projects_project_public_gateways_add_description3": "e può essere utilizzata insieme ad altre funzionaltà di rete, come il Load Balancer OVHcloud per il Public Cloud e i Floating IP.",
   "pci_projects_project_public_gateways_add_learn_more": "Scopri di più",
   "pci_projects_project_public_gateways_add_size_sub_title": "Selezionare la taglia",
   "pci_projects_project_public_gateways_add_size_info": "Seleziona la taglia del tuo Gateway. *I prezzi non includono l'IVA.",
