--- a/packages/manager/modules/pci/src/projects/project/instances/add/translations/Messages_pt_PT.json
+++ b/packages/manager/modules/pci/src/projects/project/instances/add/translations/Messages_pt_PT.json
@@ -34,7 +34,7 @@
   "pci_projects_project_instances_add_privateNetwork_info1": "O modo Público é selecionado por predefinição: este é o modelo de rede clássico. É possível que não seja compatível com todos os produtos nem esteja disponível em todas as regiões.",
   "pci_projects_project_instances_add_privateNetwork_public_mode": "Modo Público",
   "pci_projects_project_instances_add_privateNetwork_public_mode_description1": "É o modelo de rede clássico das instâncias Public Cloud. As instâncias terão uma porta de rede pública associada.",
-  "pci_projects_project_instances_add_privateNetwork_public_mode_description2": "Tenha em conta que este modo não é compatível para os novos serviços de rede (Load Balancer ou Floating IP).",
+  "pci_projects_project_instances_add_privateNetwork_public_mode_description2": "Tenha em conta que este modo não é compatível com os novos serviços de rede (Load Balancer ou Floating IP).",
   "pci_projects_project_instances_add_privateNetwork_private_mode": "Modo Privado",
   "pci_projects_project_instances_add_privateNetwork_private_mode_description1": "As instâncias só estarão associadas a uma rede privada. Esta pode ser completamente privada ou exposta à Internet por meio dos serviços Gateway ou Load Balancer com os Floating IP.",
   "pci_projects_project_instances_add_privateNetwork_private_mode_description2": "Tenha em atenção que, para um acesso SSH a partir da Internet, é necessário um Floating IP ou outra instância (chamada SSH-Proxy).",
@@ -51,7 +51,7 @@
   "pci_projects_project_instances_add_attch_floating_ip_banner_description2": "Para mais informações, ",
   "pci_projects_project_instances_add_attch_floating_ip_banner_description3": "consulte este guia",
   "pci_projects_project_instances_add_create_floating_ip_action": "Criar um novo Floating IP",
-  "pci_projects_project_instances_add_select_floating_ip_label": "Selecione um Floating IP",
+  "pci_projects_project_instances_add_select_floating_ip_label": "Escolha um Floating IP",
   "pci_projects_project_instances_add_create_floating_ip_banner_info": "A criação do seu Floating IP será efetuada no final do processo de configuração.",
   "pci_projects_project_instances_add_automated_backup_label": "Backup automatizado das instâncias",
   "pci_projects_project_instances_add_automated_backup_recommended": "Recomendado",
