--- a/packages/manager/modules/pci/src/projects/project/additional-ips/components/terminate/translations/Messages_it_IT.json
+++ b/packages/manager/modules/pci/src/projects/project/additional-ips/components/terminate/translations/Messages_it_IT.json
@@ -1,5 +1,5 @@
 {
-  "pci_additional_ips_floating_ips_floating_ip_terminate_title": "Vuoi davvero eliminare questo Floating IP {{ ip }}?",
+  "pci_additional_ips_floating_ips_floating_ip_terminate_title": "Vuoi davvero eliminare il Floating IP {{ ip }}?",
   "pci_additional_ips_floating_ips_floating_ip_terminate_confirm": "Confermare",
   "pci_additional_ips_floating_ips_floating_ip_terminate_cancel": "Annullare",
   "pci_additional_ips_floating_ips_floating_ip_terminate_success_info": "L'IP {{ ip }} è stato eliminato correttamente.",
