--- a/packages/manager/modules/pci/src/projects/project/additional-ips/failover-ips/translations/Messages_pl_PL.json
+++ b/packages/manager/modules/pci/src/projects/project/additional-ips/failover-ips/translations/Messages_pl_PL.json
@@ -3,7 +3,7 @@
   "pci_additional_ips_geoloc": "Kraj",
   "pci_additional_ips_id": "Przypisana usługa",
   "pci_additional_ips_routedTo": "Przypisana instancja",
-  "pci_additional_ips_import_failover_ip": "Importuj dodatkowy adres Additional IP",
+  "pci_additional_ips_import_failover_ip": "Importuj adres Additional IP",
   "pci_additional_ips_update_instance": "Zmień przypisaną instancję",
   "pci_additional_ips_delete": "Usuń",
   "pci_additional_ips_mitigation": "Włącz/Wyłącz mitygację",
