--- a/packages/manager/modules/pci/src/projects/project/additional-ips/order/translations/Messages_es_ES.json
+++ b/packages/manager/modules/pci/src/projects/project/additional-ips/order/translations/Messages_es_ES.json
@@ -1,8 +1,8 @@
 {
-  "pci_additional_ips_failoverip_order": "Comprar direcciones Additional IP Cloud",
+  "pci_additional_ips_failoverip_order": "Contratar direcciones Additional IP",
   "pci_additional_ips_failoverip_order_generate": "Generar la orden de pedido",
   "pci_additional_ips_failoverip_order_cancel": "Cancelar",
-  "pci_additional_ips_failoverip_order_description": "Las direcciones Additional IP Cloud pueden transferirse de un servidor a otro dentro de un mismo proyecto cloud y de un mismo continente.",
+  "pci_additional_ips_failoverip_order_description": "Las direcciones Additional IP pueden transferirse de un servidor a otro dentro de un mismo proyecto cloud y de un mismo continente.",
   "pci_additional_ips_failoverip_order_quantity": "Número de direcciones Additional IP",
   "pci_additional_ips_failoverip_order_instance": "Instancias que quiere asociar",
   "pci_additional_ips_failoverip_order_region": "País de la Additional IP",
@@ -19,7 +19,7 @@
   "pci_additional_ip_failover_ip": "Additional IP (OVHcloud)",
   "pci_additional_ip_failover_ip_description": "Solución optimizada para las operaciones de balanceo entre servicios de OVHcloud Es necesario configurar el servicio manualmente, compatibilidad con casos de uso de cloud híbrido. Pago por adelantado",
   "pci_additional_ip_create_step_select_region_failover_ip": "Seleccione un país para la nueva Additional IP de OVHcloud",
-  "pci_additional_ip_create_step_select_region_description_failover_ip": "Para más información sobre las direcciones Additional IP, haga clic <a href=\"{{ guideLink }}\" target=\"_blank\" data-track-name=\"{{ trackLabel }}\" data-track-on=\"click\" data-track-type=\"action\">aquí</a>.",
+  "pci_additional_ip_create_step_select_region_description_failover_ip": "Para más información sobre las direcciones Additional IP, haga clic <a href=\"{{ guideLink }}\" target=\"_blank\" data-track-name=\"{{ trackLabel }}\" data-track-on=\"click\" data-track-type=\"action\">aquí.</a>",
   "pci_additional_ip_create_step_attach_instance_info_failover_ip": "Esta IP se conectará directamente a la instancia (modo anterior, sin servicio Gateway). Seleccione la instancia que desea utilizar. Es necesario realizar una operación manual en la instancia. Para más información, haga clic <a href=\"{{ guideLink }}\" target=\"_blank\" data-track-name=\"{{ trackLabel }}\" data-track-on=\"click\" data-track-type=\"action\">aquí</a>.",
   "pci_additional_ip_create_no_instance_message_failover_ip": "Actualmente no tiene ninguna instancia a la que asociar una Additional IP. Por favor, cree un servicio Additional IP.",
   "pci_additional_ip_floating_ip": "Floating IP (Public Cloud)",
@@ -39,5 +39,5 @@
   "pci_additional_ip_price_per_month": "{{ price }}/mes",
   "pci_additional_ip_creating_floating_ip": "Crear una Floating IP",
   "pci_additional_ip_create_floating_ip_success": "Se está asignando una nueva Floating IP...",
-  "pci_additional_ip_create_floating_ip_error": "Se ha producido un error al asignar la Floating IP: {{ message }}"
+  "pci_additional_ip_create_floating_ip_error": "No se ha producido un error al atribuir la Floating IP: {{ message }}"
 }
