--- a/packages/manager/modules/pci/src/projects/project/additional-ips/order/translations/Messages_it_IT.json
+++ b/packages/manager/modules/pci/src/projects/project/additional-ips/order/translations/Messages_it_IT.json
@@ -1,8 +1,8 @@
 {
-  "pci_additional_ips_failoverip_order": "Acquistare Additional IP Cloud",
+  "pci_additional_ips_failoverip_order": "Acquistare Additional IP",
   "pci_additional_ips_failoverip_order_generate": "Genera l’ordine",
   "pci_additional_ips_failoverip_order_cancel": "Annullare",
-  "pci_additional_ips_failoverip_order_description": "Gli indirizzi Additional IP Cloud sono trasferibili da un server all'altro all'interno di uno stesso progetto Cloud e di uno stesso continente.",
+  "pci_additional_ips_failoverip_order_description": "Gli indirizzi Additional IP sono trasferibili da un server all'altro all'interno di uno stesso progetto Cloud e di uno stesso continente.",
   "pci_additional_ips_failoverip_order_quantity": "Numero di Additional IP",
   "pci_additional_ips_failoverip_order_instance": "Istanza da associare",
   "pci_additional_ips_failoverip_order_region": "Paese dell'Additional IP",
@@ -18,13 +18,13 @@
   "pci_additional_ip_select_network_placeholder": "Seleziona una rete/IP",
   "pci_additional_ip_failover_ip": "Additional IP (OVHcloud)",
   "pci_additional_ip_failover_ip_description": "Soluzione ottimizzata per le operazioni di trasferimento tra servizi OVHcloud. Configurazione manuale necessaria, supporto dei casi d’uso del Cloud ibrido. Pagato in anticipo.",
-  "pci_additional_ip_create_step_select_region_failover_ip": "Seleziona un Paese per il tuo nuovo Additional IP OVHcloud",
+  "pci_additional_ip_create_step_select_region_failover_ip": "Seleziona un Paese per il nuovo Additional IP OVHcloud",
   "pci_additional_ip_create_step_select_region_description_failover_ip": "Per maggiori informazioni sugli Additional IP, <a href=\"{{ guideLink }}\" target=\"_blank\" data-track-name=\"{{ trackLabel }}\" data-track-on=\"click\" data-track-type=\"action\">clicca qui.</a>",
   "pci_additional_ip_create_step_attach_instance_info_failover_ip": "Questo IP sarà connesso direttamente all'istanza (vecchia modalità, senza Gateway). Seleziona l'istanza da utilizzare È necessaria un'operazione manuale sull'istanza. Per maggiori informazioni, <a href=\"{{ guideLink }}\" target=\"_blank\" data-track-name=\"{{ trackLabel }}\" data-track-on=\"click\" data-track-type=\"action\">clicca qui</a>.",
-  "pci_additional_ip_create_no_instance_message_failover_ip": "Al momento non disponi di istanze su cui associare un Additional IP. Ti preghiamo di crearne una.",
+  "pci_additional_ip_create_no_instance_message_failover_ip": "Al momento non sono disponibili istanze a cui associare un Additional IP. Ti preghiamo di crearne una.",
   "pci_additional_ip_floating_ip": "Floating IP (Public Cloud)",
   "pci_additional_ip_floating_ip_description": "Soluzione ottimizzata per utilizzi Public Cloud, automatizzazione (Terraform) e supporto di reti private regionali. Disponibile con modello di fatturazione a consumo.",
-  "pci_additional_ip_create_step_select_region_floating_ip": "Seleziona una Region per il tuo nuovo Floating IP",
+  "pci_additional_ip_create_step_select_region_floating_ip": "Seleziona una Region per il nuovo Floating IP mobile",
   "pci_additional_ip_create_step_select_region_description_floating_ip": "Non trovi la Region che cerchi nella lista? Per maggiori informazioni sulla disponibilità dei prodotti per Region, <a href=\"{{ guideLink }}\" target=\"_blank\" data-track-name=\"{{ trackLabel }}\" data-track-on=\"click\" data-track-type=\"action\">clicca qui.</a>",
   "pci_additional_ip_create_step_attach_instance_description_floating_ip": "Sono mostrate solo le istanze con reti private",
   "pci_additional_ip_create_no_instance_message_floating_ip": "Nella Region selezionata non sono state trovate istanze con rete privata. Creane una prima di associare un Floating IP.",
@@ -35,7 +35,7 @@
   "pci_additional_ip_create_summary_step_that_is": "cioè",
   "pci_additional_ip_create_step_summary_banner2": "Nella Region selezionata è stato rilevato un servizio Gateway già utilizzato: {{ gatewayName }} Verrà utilizzato per configurare un nuovo Floating IP.",
   "pci_additional_ip_create_step_summary_banner3": "Nella Region selezionata è stato rilevato un servizio Gateway disponibile ({{gatewayName}}) che può essere utilizzato. Per configurarlo con il nuovo Floating IP, su Gateway deve essere attivata l'opzione di 'Gateway esterno' (SNAT). Vuoi continuare?",
-  "pci_additional_ip_create_step_summary_banner3_confirmation": "Sì, voglio attivare l'opzione SNAT su {{ gatewayName }} e configurarla con un nuovo Floating IP.",
+  "pci_additional_ip_create_step_summary_banner3_confirmation": "Sì, voglio attivare l'opzione SNAT su {{ gatewayName }} e configurarlo con un nuovo Floating IP.",
   "pci_additional_ip_price_per_month": "{{ price }}/mese",
   "pci_additional_ip_creating_floating_ip": "Creare un Floating IP",
   "pci_additional_ip_create_floating_ip_success": "Assegnazione di un nuovo Floating IP in corso...",
