--- a/packages/manager/modules/pci/src/projects/project/gateways/add/translations/Messages_en_GB.json
+++ b/packages/manager/modules/pci/src/projects/project/gateways/add/translations/Messages_en_GB.json
@@ -2,7 +2,7 @@
   "pci_projects_project_public_gateways_add_title": "Create a Gateway instance",
   "pci_projects_project_public_gateways_add_description1": "Create a new Gateway instance to securely access external networks.",
   "pci_projects_project_public_gateways_add_description2": "This is the best choice for accessing internet resources from private instances (SNAT).",
-  "pci_projects_project_public_gateways_add_description3": "You can also use it with other network features, such as the OVHcloud Load Balancer for Public Cloud, or Floating IPs.",
+  "pci_projects_project_public_gateways_add_description3": "You can also use it with other network features, such as the OVHcloud Load Balancer for Public Cloud, or floating IPs.",
   "pci_projects_project_public_gateways_add_learn_more": "Find out more",
   "pci_projects_project_public_gateways_add_size_sub_title": "Select size",
   "pci_projects_project_public_gateways_add_size_info": "Select the size of your Gateway. *Prices do not include VAT.",
