--- a/packages/manager/modules/pci/src/projects/project/gateways/translations/Messages_de_DE.json
+++ b/packages/manager/modules/pci/src/projects/project/gateways/translations/Messages_de_DE.json
@@ -2,7 +2,7 @@
   "pci_projects_project_public_gateway_title": "Gateway",
   "pci_projects_project_public_gateways_intro_part_1": "Die Gateways bieten Konnektivität für private Instanzen. Dies ermöglicht einen gesicherten Zugang zu externen Netzwerken sowie einen externen Zugang zu einer Anwendung:",
   "pci_projects_project_public_gateways_intro_part_2": "Im ersten Fall fungiert Gateway als SNAT-Gateway und erlaubt es Instanzen, auf das Internet zuzugreifen, jedoch nicht umgekehrt.",
-  "pci_projects_project_public_gateways_intro_part_3": "Im zweiten Beispiel wird ein Service per Internet zugänglich gemacht, der einer privaten Instanz oder einem Loadbalancer nachgeschaltet ist. Dies erfolgt durch Floating IPs.",
+  "pci_projects_project_public_gateways_intro_part_3": "Im zweiten Beispiel wird ein Service per Internet zugänglich gemacht, der sich hinter einer privaten Instanz oder einem Loadbalancer befindet. Dies erfolgt durch Floating IPs.",
   "pci_projects_project_public_gateway_create": "Gateway erstellen",
   "pci_projects_project_public_gateway_name": "Name/ID",
   "pci_projects_project_public_gateway_region": "Region",
