--- a/packages/manager/modules/pci/src/projects/project/gateways/translations/Messages_en_GB.json
+++ b/packages/manager/modules/pci/src/projects/project/gateways/translations/Messages_en_GB.json
@@ -2,7 +2,7 @@
   "pci_projects_project_public_gateway_title": "Gateway",
   "pci_projects_project_public_gateways_intro_part_1": "Gateways provide connectivity to private instances, enabling secure access to external networks or exposing the application to external access:",
   "pci_projects_project_public_gateways_intro_part_2": "In the first case, the Gateway acts as a SNAT gateway, allowing instances to reach the internet, but not the other way around.",
-  "pci_projects_project_public_gateways_intro_part_3": "In the second example, you can expose a service behind a private instance or Load Balancer to the internet using Floating IPs.",
+  "pci_projects_project_public_gateways_intro_part_3": "In the second example, you can expose a service behind a private instance or load balancer to the internet using floating IPs.",
   "pci_projects_project_public_gateway_create": "Create a Gateway",
   "pci_projects_project_public_gateway_name": "Name/ID",
   "pci_projects_project_public_gateway_region": "Region",
