--- a/packages/manager/modules/pci/src/projects/project/instances/create-private-network-warning/translations/Messages_pl_PL.json
+++ b/packages/manager/modules/pci/src/projects/project/instances/create-private-network-warning/translations/Messages_pl_PL.json
@@ -1,5 +1,5 @@
 {
-  "pci_instances_create_private_network_warning_info": "Aby przypisać Floating IP do tej instancji, najpierw skonfiguruj prywatną sieć na tej instancji w wybranym regionie.",
+  "pci_instances_create_private_network_warning_info": "Aby przypisać adres Floating IP do tej instancji, najpierw skonfiguruj na niej prywatną sieć w wybranym regionie. ",
   "pci_instances_create_private_network_warning_submit_label": "Utwórz prywatną sieć",
   "pci_instances_create_private_network_warning_cancel_label": "Anuluj"
 }
