--- a/packages/manager/modules/pci/src/projects/project/instances/translations/Messages_en_GB.json
+++ b/packages/manager/modules/pci/src/projects/project/instances/translations/Messages_en_GB.json
@@ -42,7 +42,7 @@
   "pci_projects_project_instances_status_RESUMING": "Recovery in progress",
   "pci_projects_project_instances_view_label": "Instance details",
   "pci_projects_project_instances_edit_label": "Edit",
-  "pci_projects_project_instances_assign_floating_ip_label": "Assign a Floating IP",
+  "pci_projects_project_instances_assign_floating_ip_label": "Assign a floating IP",
   "pci_projects_project_instances_activeMonthlyBilling_label": "Switch to monthly subscription",
   "pci_projects_project_instances_createBackup_label": "Create a backup",
   "pci_projects_project_instances_start_label": "Boot",
