--- a/packages/manager/modules/pci/src/projects/project/instances/translations/Messages_pl_PL.json
+++ b/packages/manager/modules/pci/src/projects/project/instances/translations/Messages_pl_PL.json
@@ -42,7 +42,7 @@
   "pci_projects_project_instances_status_RESUMING": "Trwa wznowienie",
   "pci_projects_project_instances_view_label": "Informacje o instancji",
   "pci_projects_project_instances_edit_label": "Edycja",
-  "pci_projects_project_instances_assign_floating_ip_label": "Przypisz Floating IP",
+  "pci_projects_project_instances_assign_floating_ip_label": "Przypisz adres Floating IP",
   "pci_projects_project_instances_activeMonthlyBilling_label": "Przejdź na abonament miesięczny",
   "pci_projects_project_instances_createBackup_label": "Utwórz kopię",
   "pci_projects_project_instances_start_label": "Uruchom",
