--- a/packages/manager/modules/pci/src/projects/project/private-networks/empty/translations/Messages_en_GB.json
+++ b/packages/manager/modules/pci/src/projects/project/private-networks/empty/translations/Messages_en_GB.json
@@ -5,6 +5,6 @@
   "pci_projects_project_network_private_vrack_explanation_1": "You can instantly create private networks on demand. They guarantee level 2 isolation and are compatible with DHCP service to automatically deliver IP addressing to your instances. Each private network can be deployed in a single location or it can connect all of your project regions together. ",
   "pci_projects_project_network_private_vrack_explanation_2": "Your private networks are contained in your vRack. They can then be connected to other OVHcloud solutions attached to the same vRack, using a common VLAN ID.",
   "pci_projects_project_network_private_vrack_guides_create_private_network_with_gateway_title": "Creating a private network with Gateway via the OVHcloud Control Panel",
-  "pci_projects_project_network_private_vrack_guides_attach_pci_floating_ip_to_instance_title": "Attach a Public Cloud Floating IP to an instance",
+  "pci_projects_project_network_private_vrack_guides_attach_pci_floating_ip_to_instance_title": "Attaching a Public Cloud floating IP to an instance",
   "pci_projects_project_network_private_vrack_guides_private_networks_title": "A private and flexible connection between your instances"
 }
